--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
